More detail on muquans laser

--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -42,6 +42,9 @@ linkcolor=black
     \input{theory}
     \input{expsetup}
     \input{compcontrol}
+    \input{atompreparation}
+    \input{interferometry}
+    \input{conclusion}
 \end{mainmatter}
 
 \begin{appendices}
