--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
 \graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4}{Figures/}}
-
+\setmainmatterspacing{double}
 \newcommand{\Muquans}[0]{\(\mu\)Quans\xspace}
 %% Disables warning about Command terminated with a space
 % chktex-file 1
