some chapter re-structuring

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -7,16 +7,13 @@ This chapter presents the work that went towards the initial stages of the exper
     \item Characterisation of the moving frame optical molasses
     \item Various schemes for preparing atoms into \(\ket{1,0}\). {\textit mention velocity selection here or in next chapter?}
 \end{itemize}
-\section{Preliminary Trapping}\label{sec:load_3DMOT}
-\subsection{Loading from the 2D MOT}
-\subsection{3D MOT Characteristics}
-\subsubsection{Loading Rate}
-\subsubsection{Temperature}
-\section{Launching and Further Cooling}\label{sec:launch_cool}
-\subsection{Optical Molasses}
-\subsection{Launching the Atoms}
+
+\section{Cooling in Optical Molasses}
+\subsection{Real-time Frequency Control}
+\subsection{Optimising the Temperature}
+
 \section{State Preparation}\label{sec:state_prep}
 \subsection{Schemes for Preparation}
 \subsection{Optical Pumping Scheme}
-\subsection{Improving State Purity}
-\subsubsection{Driving Microwave Transitions}
+\subsection{Including Microwave Transitions}
+\subsubsection{Wind-Freak Synthesiser}
