--- a/interferometry.tex
+++ b/interferometry.tex
@@ -8,10 +8,23 @@ This chapter describes the work towards realising an atom interferometer and sub
     \item Making a three-pulse atom interferometer
     \item Improving acceleration sensitivity and correlating vibrations using MEMS
 \end{itemize}
-\section{Raman Spectroscopy}\label{sec:atomint_ramanspec}
+\section{Raman Optical System}\label{sec:setup_ramanoptics}
+\subsection{Raman Beam Collimator}\label{subsec:setup_ramancollimator}
+\subsection{Retro-reflection Assembly}\label{subsec:setup_ramanmirror}
+\subsection{The MEMS Accelerometer}
+
+\section{Driving Raman Transitions}
+\subsection{Frequency and Phase Control}
+
+\section{Atom Detection}
+\subsection{Optical System}
+\subsection{Measuring the Interferometer Phase}
+
 \section{Individual Pulse Characterisation} \label{sec:atomint_rabiosc}
 \subsection{Velocity-Selective Pulse}
 \subsection{Interferometer Pulses}
+
 \section{Three-Pulse Atom Interference} \label{sec:atomint_threepulse}
+
 \section{Measuring Accelerations}\label{sec:atomint_accelerations}
 \subsection{Vibration Sensitivity}
