--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -40,8 +40,9 @@ linkcolor=black
 \begin{mainmatter}
     \input{introduction}
     \input{theory}
-    \input{expsetup}
     \input{compcontrol}
+    \input{expsetup}
+    \input{mots}
     \input{atompreparation}
     \input{interferometry}
     \input{conclusion}
