1/5/18 - Added low level hardware stuff

--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -1,3 +1,4 @@
+ % !TEX root
 %% For normal draft builds (figs not displayed hence fast compile)
 %\documentclass[hyperpdf,nobind,draft,oneside]{hepthesis}
 %\documentclass[hyperpdf,nobind,draft,twoside]{hepthesis}
@@ -41,11 +42,12 @@ linkcolor=black
     \input{introduction}
     \input{theory}
     \input{compcontrol}
-    \input{expsetup}
+    %\input{expsetup}
     \input{mots}
     \input{atompreparation}
     \input{interferometry}
     \input{conclusion}
+    \printbibliography
 \end{mainmatter}
 
 \begin{appendices}
