--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,8 @@
 \usepackage{morefloats,subfig,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
+\usepackage[backend=bibtex,url=false]{biblatex}
+\addbibresource{Thesis.bib}
 \graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4}{Figures/}}
 \setmainmatterspacing{double}
 \newcommand{\Muquans}[0]{\(\mu\)Quans\xspace}
