08/01/2018 - first draft of computer control chapter

--- a/interferometry.tex
+++ b/interferometry.tex
@@ -11,10 +11,10 @@ This chapter describes the work towards realising an atom interferometer and sub
 \section{Raman Optical System}\label{sec:setup_ramanoptics}
 \subsection{Raman Beam Collimator}\label{subsec:setup_ramancollimator}
 \subsection{Retro-reflection Assembly}\label{subsec:setup_ramanmirror}
-\subsection{The MEMS Accelerometer}
+\subsection{The MEMS Accelerometer}\label{subsec:raman_mems}
 
 \section{Driving Raman Transitions}
-\subsection{Frequency and Phase Control}
+\subsection{Frequency and Phase Control}\label{subsec:msquared_comm}
 
 \section{Atom Detection}
 \subsection{Optical System}
