--- a/mots.tex
+++ b/mots.tex
@@ -9,7 +9,7 @@
 \section{Generating MOT light}
 \subsection{Muquans Laser Control}
 \subsubsection{Frequency Control}
-\subsubsection{Real-Time Communication}
+\subsubsection{Real-Time Communication} \label{subsec:muquans_comm}
 
 \section{Controlling the MOTs}
 \subsection{Optical Fibre Network}
