--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -14,6 +14,6 @@ This chapter presents the work that went towards the initial stages of the exper
 
 \section{State Preparation}\label{sec:state_prep}
 \subsection{Schemes for Preparation}
-\subsection{Optical Pumping Scheme}
+\subsection{Optical Pumping Scheme} 
 \subsection{Including Microwave Transitions}
-\subsubsection{Wind-Freak Synthesiser}
+\subsubsection{Wind-Freak Synthesiser}\label{subsec:windfreak}
