--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -41,8 +41,8 @@ linkcolor=black
     \input{introduction}
     \input{theory}
     \input{compcontrol}
-    \input{expsetup}
-    %\input{mots}
+    %\input{expsetup}
+    \input{mots}
     \input{atompreparation}
     \input{interferometry}
     \input{conclusion}
