--- a/preamble.tex
+++ b/preamble.tex
@@ -19,7 +19,7 @@
 \immediate\write18{perl texcount.pl \jobname.tex -1 -sum=1 -merge -out=\jobname.sum}
 \newcommand\wordcount{\input{\jobname.sum}}
 \addbibresource{Thesis.bib}
-\graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4}{Figures/}{Figures/Chapter5}}
+\graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4/}{Figures/}{Figures/Chapter5/}{Figures/Chapter6/}}
 
 
 \newcommand{\Muquans}[0]{\(\mu\)Quans\xspace}
