30/05 - First draft of MOT chamber section

--- a/preamble.tex
+++ b/preamble.tex
@@ -26,6 +26,9 @@
 \newcommand{\sivalue}[2]{\SI[mode=text]{#1}{#2}}
 \newcommand{\keff}{{\textbf k_\textnormal{eff}}}
 \newcommand{\pow}[2]{\(#1 \times 10^{#2}\)}
+\newcommand{\mf}[0]{\(m_\textnormal{F}\)}
+\DeclareSIUnit\inch{in}
+\DeclareSIUnit\gauss{G}
 %% Disables warning about Command terminated with a space
 %chktex-file 1
 
