03/06 - Mot Equipment Section

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -17,3 +17,5 @@ This chapter presents the work that went towards the initial stages of the exper
 \subsection{Optical Pumping Scheme} 
 \subsection{Including Microwave Transitions}
 \subsubsection{Wind-Freak Synthesiser}\label{subsec:windfreak}
+
+\subsection{Blow-Away}\label{subsec:blow_away}
