22/06/18 - preliminary mot hardware chapter

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -8,7 +8,7 @@ This chapter presents the work that went towards the initial stages of the exper
     \item Various schemes for preparing atoms into \(\ket{1,0}\). {\textit mention velocity selection here or in next chapter?}
 \end{itemize}
 
-\section{Cooling in Optical Molasses}
+\section{Cooling in Optical Molasses}\label{sec:optical_molasses}
 \subsection{Real-time Frequency Control}
 \subsection{Optimising the Temperature}
 
