--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -27,7 +27,7 @@
     \include{introduction}
     \include{theory}
     \include{compcontrol}
-    \include{expsetup}
+    %\include{expsetup}
     \include{mots}
     \include{atompreparation}
     \include{interferometry}
