--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,7 @@
 \usepackage[backend=bibtex,url=false]{biblatex}
 \usetikzlibrary{external}% activate!
 \usepackage{tikz-timing}
+\usepackage{booktabs}
 \setmainmatterspacing{double}
 
 %%% Useful Commands %%%
@@ -21,12 +22,17 @@
 \addbibresource{Thesis.bib}
 \graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4/}{Figures/}{Figures/Chapter5/}{Figures/Chapter6/}}
 
+\makeatletter
+\providecommand*{\input@path}{}
+\g@addto@macro\input@path{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4/}{Figures/}{Figures/Chapter5/}{Figures/Chapter6/}}%append
+\makeatother
 
 \newcommand{\Muquans}[0]{\(\mu\)Quans\xspace}
 \newcommand{\sivalue}[2]{\SI[mode=text]{#1}{#2}}
 \newcommand{\keff}{{\textbf k_\textnormal{eff}}}
 \newcommand{\pow}[2]{\(#1 \times 10^{#2}\)}
 \newcommand{\mf}[0]{\(m_\textnormal{F}\)}
+\newcommand{\trans}[2]{\(\ket{F=#1} \rightarrow \ket{F'=#2}\)}
 \DeclareSIUnit\inch{in}
 \DeclareSIUnit\gauss{G}
 %% Disables warning about Command terminated with a space
