02/07 - Most of molasses. Comitting before making compcontrol changes

--- a/interferometry.tex
+++ b/interferometry.tex
@@ -454,6 +454,6 @@ As the forward-propagating fields have opposite handedness, the counter-propagat
 \subsection{Interferometer Pulses}
 
 \section{Three-Pulse Atom Interference} \label{sec:atomint_threepulse}
-
+\subsection{Fringe Contrast vs. Launch Trajectory}\label{subsec:launch_contrast}
 \section{Measuring Accelerations}\label{sec:atomint_accelerations}
 \subsection{Vibration Sensitivity}
