--- a/interferometry.tex
+++ b/interferometry.tex
@@ -443,11 +443,11 @@ along the horizontal and vertical axis of less than
 
 \section{Driving Raman Transitions}\label{sec:raman_transitions}
 As the forward-propagating fields have opposite handedness, the counter-propagating fields have the same handedness as the field
-\subsection{Frequency and Phase Control}\label{subsec:msquared_comm}
+\subsection{Frequency and Phase Control}\label{sec:msquared_laser}
 
 \section{Atom Detection}
 \subsection{Optical System}\label{subsec:photodiode_setup}
-\subsection{Measuring the Interferometer Phase}
+\subsection{Measuring the Interferometer Phase}\label{subsec:phase_measurement}
 
 \section{Individual Pulse Characterisation} \label{sec:atomint_rabiosc}
 \subsection{Velocity-Selective Pulse}
