--- a/mots.tex
+++ b/mots.tex
@@ -252,7 +252,7 @@ coil pair is presented in \TableRef{tab:bias_coils}.\begin{table}
 	\caption[Table of parameters for each 3D \ac{mot} bias coil.]{Table of
 		parameters for each 3D \ac{mot }bias coil. \(a\) denotes the axial
 		separation between each coil, \(r_i\) and \(r_o\) are the inner and
-		outer radi. Each coil was wound to give 50 loops (5 axial and 10 radial
+		outer radii. Each coil was wound to give 50 loops (5 axial and 10 radial
 		turns).}
 	\label{tab:bias_coils}
 \end{table}
