--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usetikzlibrary{external}% activate!
 \usepackage{tikz-timing}
 \usepackage{booktabs}
+\usepackage{mathabx}
 \setmainmatterspacing{double}
 
 %%% Useful Commands %%%
