--- a/theory.tex
+++ b/theory.tex
@@ -10,3 +10,4 @@
 \section{Laser Cooling of Rubidium-87}
 \section{Raman Transitions in Rubidium-87}\label{sec:theory_raman}
 \section{Light Pulse Atom Interferometry}\label{sec:theory_atomint}
+\subsection{The Double Interferometer}\label{sec:theory_double_int}
