--- a/interferometry.tex
+++ b/interferometry.tex
@@ -445,7 +445,7 @@ along the horizontal and vertical axis of less than
 As the forward-propagating fields have opposite handedness, the counter-propagating fields have the same handedness as the field
 \subsection{Frequency and Phase Control}\label{sec:msquared_laser}
 
-\section{Atom Detection}
+\section{Atom Detection}\label{sec:atom_detection}
 \subsection{Optical System}\label{subsec:photodiode_setup}
 \subsection{Measuring the Interferometer Phase}\label{subsec:phase_measurement}
 
