--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -14,7 +14,7 @@
 %% Load special font packages here if you wish
 
 \include{preamble}
-\includeonly{atompreparation}
+%\includeonly{compcontrol}
 \makeatother
 %\tikzexternalize
 \begin{document}
