Commit before remote push

--- a/interferometry.tex
+++ b/interferometry.tex
@@ -78,7 +78,7 @@ necessary to achieve a large contrast between the two interferometer states.
 Relaxing the assumptions made on the ensemble's velocity distribution to
 include its influence on the detuning and spatial distribution of the atoms
 during the interferometer would strengthen this argument.
-\begin{figure}[!ht]
+\begin{figure}[!htbp][!ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fringe_contrast.pdf}
 	\caption[Simulated fringe contrast vs beam waist size]{Simulated fringe
@@ -125,7 +125,7 @@ The value of this expected contrast is plotted in
 \FigureRef{fig:raman_phasenoise} and shows a strong dependence on
 \(\sigma_\phi\).
 {\huge Add more justification here. Cite Achim Peter's paper}
-\begin{figure}
+\begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=0.5\textwidth]{phase_noise_contrast.pdf}
 	\caption{Expected contrast as a function of random phase contributions. This
@@ -187,7 +187,7 @@ was included to increase the divergence angle of light from the fibre. These
 are manufactured by Thorlabs and have a focal length of
 \sivalue{4.51}{\milli\metre} (352230-B) and \(\sivalue{15.29}{\milli\metre}\)
 (352260-B), respectively, to give a magnification of 3.39.
-\begin{figure}
+\begin{figure}[!htbp]
 	\centering
 	\def\svgwidth{\columnwidth}
 	\subfloat[][]{\scalebox{0.4}{\input{Figures/Chapter6/raman_optics.pdf_tex}\label{fig:raman_collimator}}}
@@ -248,7 +248,7 @@ Comparing the wavefront distortion in this case, a requirement on the
 longitudinal misalignment of \(< \sivalue{0.6}{\milli\metre}\) is needed for
 the previously specified flatness.
 
-\begin{figure}
+\begin{figure}[!htbp]
 	\centering
 	\def\svgwidth{\columnwidth}
 	\subfloat[][]{\includegraphics[width=0.4\textwidth]{wavefront_transverse.pdf}\label{fig:raman_wave_transverse}}
@@ -301,7 +301,7 @@ thickness of the waveplate in front of the triplet lens, measured by Light
 Machinery using a white light interferometer. This has a standard deviation
 of \sivalue{4.62}{\nano\metre} and corresponds a standard deviation of the
 optical path length of \pow{8.6}{-3}\(\lambda\).
-\begin{figure}
+\begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=0.5\textwidth]{waveplate.pdf}
 	\caption{Thickness of the first \ac{QWP}, measured by a white light
@@ -415,7 +415,7 @@ the reflected light back into the fibre. The difference in the piezo control
 voltages from their optimal values corresponds to a tilt of the mirror mount
 along the horizontal and vertical axis of less than
 \sivalue{13}{\micro\radian}.
-\begin{figure}
+\begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=0.5\textwidth]{simplex_alignment}
 	\caption[Automatic mirror alignment using the Nelder-Mead simplex
