--- a/compcontrol.tex
+++ b/compcontrol.tex
@@ -38,7 +38,7 @@ a graphical method of structuring sequences, which functioned identically on
 a device level to the original method of defining sequences. In addition to
 this, I included an interface to the M Squared laser system, so that it could
 be controlled using MOTMaster. A schematic of the structure of MOTMaster and how it interfaces with hardware is shown in~\FigureRef{fig:motmaster_structre}. It is designed so that experiments can be controlled without requiring specific details about the hardware in use.
-\begin{figure}
+\begin{figure}[!htbp]
     \centering
     \fontsize{16pt}{16pt}
     \resizebox{0.4\textwidth}{!}{\input{motmaster_structure.pdf_tex}}
@@ -98,7 +98,7 @@ values at each clock cycle, the sequence is segmented into smaller patterns
 during which the state of each channel is constant, as illustrated in
 \FigureRef{fig:hsdio_timing}. NI-HSDIO cards can be scripted to generate each
 of these patterns for the appropriate number of clock cycles.
-\begin{figure}
+\begin{figure}[!htbp]
     \centering
     \input{Figures/Chapter3/hsdio_timing.tex}
     \caption[Scripted pattern generation for an NI-HSDIO card]{Scripted
@@ -131,7 +131,7 @@ This counter is connected to a digital output channel, so that it acts as a
 trigger for the serial data output. Using this method, multiple serial
 messages can be sent to one device during a sequence even for devices which
 have no means of storing commands.
-\begin{figure}
+\begin{figure}[!htbp]
     \centering
     \input{Figures/Chapter3/serial_timing.tex}
     \caption[Timing diagram for serial communication]{Timing diagram for
@@ -206,7 +206,7 @@ counter channel are configured, similarly to the rest of the \ac{DAQ}
 hardware. The sequence is started by sending a software trigger to one output
 card, which is configured to export its start trigger to the other cards.
 This ensures that start of the output of each card is synchronised. 
-\begin{figure}
+\begin{figure}[!htbp]
     \centering
     \resizebox{0.5\textwidth}{!}{\includegraphics{motmaster_sequence.png}}
     \caption[MOTMaster user interface]{A sequence as represented in the MOTMaster user interface. Each step defines a duration and properties for each output channel. The sequence can either be run repeatedly, or configured to iterate through values of a chosen parameter.}
@@ -262,7 +262,7 @@ Squared laser, so that it can control all the parameters necessary to drive
 Raman transitions during the experiment. This is done by sending structured
 JSON messages that contain commands to implement this control. More detail on how this is used in the experiment is given in
 \SectionRef{subsuc:msquared_comm}.
-\begin{figure}
+\begin{figure}[!htbp]
     \centering
     \fontsize{16pt}{14pt}
     \resizebox{1\textwidth}{!}{\input{control_hardware.pdf_tex}}
